Added Sign IN modal

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 </ul>
             </div>
             <!-- Button based on https://jsfiddle.net/shuvamallick/3o0h5oka/  but completely customized-->
-            <!-- Trigger/Open Sign in Modal -->
-            <button type="button" class="btn-sm d-none d-sm-inline-block btn-slide-red" data-toggle="modal"
-                data-target="#signin-modal">Sign in / Sign up</button>
+            <!-- Trigger/Open Sign in Modal  ||  Placed above footer -->
+            <button type="button" class="btn-slide-red btn-signin-modal" data-toggle="modal"
+                data-target="#signin-modal">Sign in</button>
         </nav>
     </header>
 
@@ -71,7 +71,7 @@
                             <section class="callout jumbotron opaque border border-white">
                                 <h1 class="jumbotron-header">Join us!</h1>
                                 <p class="lead">Sign up now to get one month free!</p>
-                                <p><button class="btn-slide-red" data-toggle="modal" data-target="#signUpModal">Sign
+                                <p><button class="btn-slide-red btn-signup-modal" data-toggle="modal" data-target="#signup-modal">Sign
                                         Up!</button></p>
                             </section>
                         </div>
@@ -238,11 +238,12 @@
                     <h4 class="font-weight-bold dark-grey-text mt-4">HIIT</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.fearlessmotivation.com/2016/09/28/no-time-for-exercise-10-reasons-why-you-should-use-hiit/  -->
-                        <p class="d-none d-md-block classes-p">Every day we make great efforts at juggling demands of different sorts. High
+                        <p class="d-none d-md-block classes-p">Every day we make great efforts at juggling demands of
+                            different sorts. High
                             intensity interval training, or HIIT Workout, is a great way to fit in a
                             rigorous workout in a short time span and make it fun to boot! It can
-                            deliver as good or better fitness benefits than steady state cardio (SSC), 
-                            such as running, but in less time per day and week. A HIIT workout is the 
+                            deliver as good or better fitness benefits than steady state cardio (SSC),
+                            such as running, but in less time per day and week. A HIIT workout is the
                             best fitness value for your time.</p>
                     </div>
                 </div>
@@ -250,10 +251,11 @@
                     <h4 class="font-weight-bold dark-grey-text mt-4">Bodypump</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.lesmills.com/clubs-and-facilities/our-workouts/strength/bodypump/  -->
-                        <p class="d-none d-md-block classes-p">BODYPUMP™ is a barbell workout for anyone looking to get lean, toned and fit
-                            – fast. Using light to moderate weights with lots of repetition, BODYPUMP is a 
-                            total body workout that burns up to 540 calories*. With scientifically proven 
-                            moves and great, pumping music, it’s a fantastic and motivating class for 
+                        <p class="d-none d-md-block classes-p">BODYPUMP™ is a barbell workout for anyone looking to get
+                            lean, toned and fit
+                            – fast. Using light to moderate weights with lots of repetition, BODYPUMP is a
+                            total body workout that burns up to 540 calories*. With scientifically proven
+                            moves and great, pumping music, it’s a fantastic and motivating class for
                             instructors to teach. Are you ready to feel the burn?</p>
                     </div>
                 </div>
@@ -261,11 +263,12 @@
                     <h4 class="font-weight-bold dark-grey-text mt-4">Boxing</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/fit-boxing/  -->
-                        <p class="d-none d-md-block classes-p">Boxing is a cardio workout in which multiple elements of training are
-                            combined. During this lesson, we will make use of punching bags and boxing 
-                            gloves. Multiple hit and punch combinations will be treated during this lesson. 
-                            During this group lesson, you will work individually or in pairs to train your 
-                            condition. endurance, and muscle strength. Are you ready to sweat and burn 
+                        <p class="d-none d-md-block classes-p">Boxing is a cardio workout in which multiple elements of
+                            training are
+                            combined. During this lesson, we will make use of punching bags and boxing
+                            gloves. Multiple hit and punch combinations will be treated during this lesson.
+                            During this group lesson, you will work individually or in pairs to train your
+                            condition. endurance, and muscle strength. Are you ready to sweat and burn
                             calories?</p>
                     </div>
                 </div>
@@ -273,10 +276,11 @@
                     <h4 class="font-weight-bold dark-grey-text mt-4">Spinning</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/spinning/  -->
-                        <p class="d-none d-md-block classes-p">A challenging, stimulating and fun training: spinning is all of this and
-                            more. You are challenged to extend your boundaries, to go much further than 
+                        <p class="d-none d-md-block classes-p">A challenging, stimulating and fun training: spinning is
+                            all of this and
+                            more. You are challenged to extend your boundaries, to go much further than
                             you thought you could. It is a training for everyone, as you can determine
-                            the intensity by adjusting the resistance of your bike. Musicwill guide you 
+                            the intensity by adjusting the resistance of your bike. Musicwill guide you
                             through this hour, with fun on top of our priority list. It is recommended to
                             bring a towel and a water bottle.</p>
                     </div>
@@ -285,7 +289,8 @@
                     <h4 class="font-weight-bold dark-grey-text mt-4">Pilates</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.bodyvita.nl/en/  -->
-                        <p class="d-none d-md-block classes-p">Pilates is an innovative and safe way of movement and provides exercises for
+                        <p class="d-none d-md-block classes-p">Pilates is an innovative and safe way of movement and
+                            provides exercises for
                             body and mind. Pilates was born from the movement principles of Joseph Pilates
                             and can transform the way your body looks and functions. The goal of
                             Pilates is not only to move but also to strengthen the connection between body
@@ -297,10 +302,11 @@
                     <h4 class="font-weight-bold dark-grey-text mt-4">Yoga</h4>
                     <div class="classes-class">
                         <!-- Text used from https://www.nytimes.com/guides/well/beginner-yoga  -->
-                        <p class="d-none d-md-block classes-p">It’s time to roll out your yoga mat and discover the combination of physical and
-                            mental exercises that for thousands of years have hooked yoga practitioners around 
-                            the globe. Whether you are young or old, overweight or fit, yoga has the power to 
-                            calm the mind and strengthen the body. Don’t be intimidated by yoga terminology, 
+                        <p class="d-none d-md-block classes-p">It’s time to roll out your yoga mat and discover the
+                            combination of physical and
+                            mental exercises that for thousands of years have hooked yoga practitioners around
+                            the globe. Whether you are young or old, overweight or fit, yoga has the power to
+                            calm the mind and strengthen the body. Don’t be intimidated by yoga terminology,
                             fancy yoga studios and complicated poses. Yoga is for everyone.
                     </div>
                 </div>
@@ -352,12 +358,14 @@
         </section>
     </div>
 
-    <!-- Sign in Modal -->
+    <!-- Sign IN Modal -->
+    <!-- https://getbootstrap.com/docs/4.6/components/modal/  -->
+    <!-- Based on https://getbootstrap.com/docs/4.6/components/forms/ -->
     <div class="modal fade" id="signin-modal" tabindex="-1" aria-labelledby="signin-modal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title" id="signin-modal">Sign in form</h3>
+                    <h3 class="modal-title" id="signin-modal">Sign in</h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -393,6 +401,71 @@
         </div>
     </div>
 
+    <!-- Sign UP modal-->
+    <!-- https://getbootstrap.com/docs/4.6/components/modal/  -->
+    <!-- Based on https://getbootstrap.com/docs/4.6/components/forms/ -->
+    <div class="modal fade" id="signup-modal" tabindex="-1" aria-labelledby="signup-modal" aria-hidden="true">
+        signin
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="signup-modal">Sign Up Form</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputEmail4">Email</label>
+                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputPassword4">Password</label>
+                                <input type="password" class="form-control" id="inputPassword4" placeholder="Password" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputAddress">Address</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputAddress2">Address 2</label>
+                            <input type="text" class="form-control" id="inputAddress2"
+                                placeholder="Apartment, studio, or floor (Optional)">
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputCity">City</label>
+                                <input type="text" class="form-control" id="inputCity" required>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="inputState">State</label>
+                                <select id="inputState" class="form-control" required>
+                                    <option selected>Choose...</option>
+                                    <option>...</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-md-2">
+                                <label for="inputZip">Zip</label>
+                                <input type="text" class="form-control" id="inputZip" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="gridCheck" required>
+                                <label class="form-check-label" for="gridCheck">
+                                    I am NOT a <span><i class="fas fa-robot"></i></span>
+                                </label>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn-slide-red btn-signup-modal">Sign Up</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
 
 
