--- a/index.html
+++ b/index.html
@@ -315,10 +315,94 @@
         </section>
     </div>
 
-    <!-- Schedule -->
-    <section id="schedule" class="container">
-
-    </section>
+    <!-- Timetable -->
+    <!-- Based on https://getbootstrap.com/docs/4.0/content/tables/  -->
+    <div class="container schedule-container">
+        <section id="timetable" class="container">
+            <div>
+                <div>
+                    <h3 class="text-center">Timetable Group Lessons </h3>
+                </div>
+                <div class="timetable-classes"></div>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Monday</th>
+                            <th scope="col">Tuesday</th>
+                            <th scope="col">Wednesday</th>
+                            <th scope="col">Thursday</th>
+                            <th scope="col">Friday</th>
+                            <th scope="col">Saturday</th>
+                            <th scope="col">Sunday</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">HIIT</th>
+                            <td>6 - 7 am<br>1 - 2 pm </td>
+                            <td>6 - 7 am<br>1 - 2 pm </td>
+                            <td>6 - 7 am<br>1 - 2 pm </td>
+                            <td>6 - 7 am<br>1 - 2 pm </td>
+                            <td>6 - 7 am<br>1 - 2 pm </td>
+                            <td>6 - 7 am<br>1 - 2 pm </td>
+                            <td>6 - 7 am<br>1 - 2 pm </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Bodypump</th>
+                            <td>7 - 8 am<br>2 - 3 pm </td>
+                            <td>7 - 8 am<br>2 - 3 pm </td>
+                            <td>7 - 8 am<br>2 - 3 pm </td>
+                            <td>7 - 8 am<br>2 - 3 pm </td>
+                            <td>7 - 8 am<br>2 - 3 pm </td>
+                            <td>7 - 8 am<br>2 - 3 pm </td>
+                            <td>7 - 8 am<br>2 - 3 pm </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Boxing</th>
+                            <td>8 - 9 am<br>3 - 4 pm </td>
+                            <td>8 - 9 am<br>3 - 4 pm </td>
+                            <td>8 - 9 am<br>3 - 4 pm </td>
+                            <td>8 - 9 am<br>3 - 4 pm </td>
+                            <td>8 - 9 am<br>3 - 4 pm </td>
+                            <td>8 - 9 am<br>3 - 4 pm </td>
+                            <td>8 - 9 am<br>3 - 4 pm </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Spinning</th>
+                            <td>9 - 10 am<br>4 - 5 pm </td>
+                            <td>9 - 10 am<br>4 - 5 pm </td>
+                            <td>9 - 10 am<br>4 - 5 pm </td>
+                            <td>9 - 10 am<br>4 - 5 pm </td>
+                            <td>9 - 10 am<br>4 - 5 pm </td>
+                            <td>9 - 10 am<br>4 - 5 pm </td>
+                            <td>9 - 10 am<br>4 - 5 pm </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Pilates</th>
+                            <td>10 - 11 am<br>5 - 6 pm </td>
+                            <td>10 - 11 am<br>5 - 6 pm </td>
+                            <td>10 - 11 am<br>5 - 6 pm </td>
+                            <td>10 - 11 am<br>5 - 6 pm </td>
+                            <td>10 - 11 am<br>5 - 6 pm </td>
+                            <td>10 - 11 am<br>5 - 6 pm </td>
+                            <td>10 - 11 am<br>5 - 6 pm </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Yoga</th>
+                            <td>11 - 12 am<br>6 - 7 pm </td>
+                            <td>11 - 12 am<br>6 - 7 pm </td>
+                            <td>11 - 12 am<br>6 - 7 pm </td>
+                            <td>11 - 12 am<br>6 - 7 pm </td>
+                            <td>11 - 12 am<br>6 - 7 pm </td>
+                            <td>11 - 12 am<br>6 - 7 pm </td>
+                            <td>11 - 12 am<br>6 - 7 pm </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </div>
 
     <!-- Contact -->
     <!-- Based on https://getbootstrap.com/docs/4.6/components/forms/ -->
