Linked navigation bar with page sections

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                 <!-- Navigation menu items-->
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item" data-toggle="collapse">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item" data-toggle="collapse">
-                        <a href="#" class="nav-link">About us</a>
+                        <a href="#aboutus" class="nav-link">About us</a>
                     </li>
                     <li class="nav-item" data-toggle="collapse">
-                        <a href="#" class="nav-link">Classes</a>
+                        <a href="#testimonials" class="nav-link">Classes</a>
                     </li>
                     <li class="nav-item" data-toggle="collapse">
-                        <a href="#" class="nav-link">Schedule</a>
+                        <a href="#timetable" class="nav-link">Schedule</a>
                     </li>
                     <li class="nav-item" data-toggle="collapse">
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="#contact" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
