Added muted text to signin modal, changed text and removed link

--- a/index.html
+++ b/index.html
@@ -427,9 +427,7 @@
                         <textarea class="col-8 form-input" name="info" id="info"
                             placeholder="- Write your message here. -"></textarea>
                         <p class="text-muted-form contact-form-p"><small id="info" class="form-text text-muted">We'll
-                                never
-                                share your personal details with anyone
-                                else.</small></p>
+                                never share your personal details with anyone else.</small></p>
                     </div>
                     <button type="Submit" value="Submit" class="btn-slide-red" id="btn-contact">Submit</button>
                 </form>
@@ -474,7 +472,7 @@
                             <label class="form-check-label" for="modal-checkbox">Remember Me</label>
                         </div>
                         <button type="submit" class="btn-slide-red">Enter</button>
-                        <div>Not yet a member? Sign up <a href="#">here</a></div>
+                        <p class="text-muted-signin"><small>Not yet a member? Sign up and click the "Join Us" button just below this pop-up!</small></p>
                     </form>
                 </div>
             </div>
