Rewritten callout-section

--- a/index.html
+++ b/index.html
@@ -57,24 +57,45 @@
     </header>
 
     <!-- http://bit.ly/3qSMcbN Used as a guideline for CSS positioning -->
-    <!-- Based on Code Institute's Whiskey Drop project
-    https://learn.codeinstitute.net/courses/course-v1:codeinstitute+FE+2017_T3/courseware/a4b90d17e5c94220a0f83f00ce7fa606/2aca2c94a518427495cc1b4bc641ccbf/?child=first -->
-         <!-- Hero image -->
+   <!-- http://bit.ly/3qSMcbN Used as a guideline for CSS positioning -->
+    <!-- Hero image -->
     <div class="container-fluid callout-container">
         <!-- Callout -->
         <div class="row">
-            <div class="col-12">
-                <section class="callout text-center">
-                    <h1 class="h1header font-weight-bold">DREAM BIG</h1>
-                    <hr class="callout-devider">
-                    <h2 class="h2header font-weight-bold">Join us!</h2>
-                    <p class="p-header">Sign up now to get one month free!</p>
-                    <p><button class="btn-slide-red btn-signup-modal" data-toggle="modal"
-                            data-target="#signup-modal">Sign Up!</button></p>
-                </section>
+            <div class="col-4"></div>
+            <div class="col-4">
+                <div class="row row-height"></div>
+                <div class="row row-height"></div>
+                <div class="row row-height">
+                    <div class="callout-section text-center">
+                        <div class="callout-smaller border border-white">
+                            <h2 class="h1-header font-weight-bold">Join us!</h2>
+                            <p class="p-header">Sign up now to get one month free!</p>
+                            <p><button class="btn-slide-red btn-signup-modal" data-toggle="modal"
+                                    data-target="#signup-modal">Sign
+                                    Up!</button></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 text-center">
+                <div class="row row-height-dream"></div>
+                <div class="row row-height-dream"></div>
+                <div class="row row-height-dream"></div>
+                <div class="row row-height-dream">D</div>
+                <div class="row row-height-dream">R</div>
+                <div class="row row-height-dream">E</div>
+                <div class="row row-height-dream">A</div>
+                <div class="row row-height-dream">M</div>
+                <div class="row row-height-dream"></div>
+                <div class="row row-height-dream big-size">BIG</div>
+                <div class="col row-height-dream"></div>
+                <div class="row row-height-dream"></div>
+                <div class="row row-height-dream"></div>
             </div>
         </div>
     </div>
+    
     <!-- Sticky social bar is based on https://www.w3schools.com/howto/howto_css_sticky_social_bar.asp -->
     <div class="icon-bar">
         <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="facebook"><i
